<resources>
    <string name="app_name">MyTravels</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="retype_password">Retype Password</string>
    <string name="register">Register</string>
    <string name="already_have_account">Already have an account</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in">Sign In</string>
    <string name="continue_as_guest">Continue As Guest</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="special_deal">You can find the best prices here!</string>
    <string name="grand_hotel_cannes">Grand Hotel Cannes</string>
    <string name="hotel_paris_louis_blanc">Hotel Paris Louis Blanc</string>
    <string name="_700_euro">700 euro</string>
    <string name="benefits">○ Parking ○ Free WiFi ○ Non-smoking rooms ○ Pets allowed ○ 24-hour front desk</string>
    <string name="description">Located in the heart of Paris, just a 2-minute walk from Canal Saint Martin, Hotel Paris Louis Blanc offers a terrace, 24-hour reception and concierge service. Louis Blanc Metro Station is opposite the property and it offers direct access to the Buttes Chaumont Park.</string>
    <string name="dates">31.12.2021 - 02.12.2022</string>
    <string name="room_type">Standard Double Room</string>
    <string name="excellent_9_5">Excellent 9.5</string>
    <string name="empty">Empty</string>
    <string name="enter_email">Enter email</string>
    <string name="email_address">Email Address</string>
    <string name="your_username">Your username:</string>
    <string name="your_password">Your password:</string>
    <string name="change_password">Change password</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="log_out">Log Out</string>
    <string name="change_password1">Change Password</string>
    <string name="download_address">Download Address</string>
    <string name="more_information">More information:</string>
    <string name="make_reservation">Make Reservation</string>
    <string name="euro">euro</string>
    <string name="_700">700</string>
    <string name="you_can_now_listen_to_music_while_browsing">You can now listen to music, while browsing.</string>
    <string name="begin_date">Begin date:</string>
    <string name="name_of_hotel">Name Of Hotel</string>
    <string name="price">price</string>
    <string name="euro_price_per_night">euro price per night</string>
    <string name="end_date">End date</string>
    <string name="final_price">Final Price</string>
    <string name="make_a_reservation">Make a reservation</string>
    <string name="i_ve_read_the_terms_and_conditions">I\'ve read the terms and conditions</string>
    <string name="calculate_price">Calculate Price</string>
    <string name="you_reservations">You reservations</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="reservations">Reservations</string>
    <string name="your_reservations">Your reservations</string>
    <string name="euro_per_night">euro per night</string>


</resources>