<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<item android:id="@+id/home"
    android:icon="@drawable/ic_home"
    android:title="@string/home"
    app:showAsAction="always"/>

    <item android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView"/>

    <item android:id="@+id/reservations"
        android:icon="@drawable/ic_favorites"
        android:title="@string/reservations"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/profile"
        android:icon="@drawable/ic_favorites"
        android:title="@string/profile"
        app:showAsAction="never"/>

    <item android:id="@+id/settings"
        android:icon="@drawable/ic_favorites"
        android:title="@string/settings"
        app:showAsAction="never"/>

    <item android:id="@+id/conditions"
        android:icon="@drawable/ic_favorites"
        android:title="@string/terms_and_conditions"
        app:showAsAction="never"/>

</menu>