<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_margin="@dimen/padding_10"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <RelativeLayout
            android:id="@+id/form_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/header"
                android:layout_alignParentTop="true"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:text="@string/change_password1"
                android:textSize="@dimen/text_size_25"/>

            <EditText
                android:id="@+id/username1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_50"
                android:hint="@string/user_name" />

            <EditText
                android:id="@+id/password1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/old_password"
                android:layout_marginTop="@dimen/padding_10"
                android:layout_below="@+id/username1"/>

            <EditText
                android:id="@+id/passwordNew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_password"
                android:layout_marginTop="@dimen/padding_10"
                android:layout_below="@+id/password1"/>

            <Button
                android:id="@+id/changePassBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_password"
                android:layout_marginTop="@dimen/padding_50"
                android:layout_below="@+id/passwordNew"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_below="@+id/changePassBtn"
                android:layout_height="wrap_content"
                android:id="@+id/settings_container"/>

        </RelativeLayout>
    </ScrollView>


</RelativeLayout>